--- a/css/styles.css
+++ b/css/styles.css
@@ -19,29 +19,26 @@ label {
   padding-bottom: 0.5rem;
 }
 
-input {
-  margin-bottom: 1rem;
-  padding: 0.5rem;
-  width: 100%;
-  border: 1px solid lightgray;
-}
-
-textarea {
-  width: 100%;
-  height: 8rem;
-  margin-bottom: 1rem;
-  padding: 0.5rem;
-  border: 1px solid lightgray;
-}
-
-.right {
-  justify-content: flex-end;
-}
-
 img,
 input,
 textarea {
   border-radius: 6px;
+}
+
+input,
+textarea {
+  margin-bottom: 1rem;
+  padding: 0.5rem;
+  width: 100%;
+  border: 1px solid lightgray;
+}
+
+textarea {
+  height: 8rem;
+}
+
+.right {
+  justify-content: flex-end;
 }
 
 .purple-bkg {
