--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,10 @@ main {
   background-color: rgb(241, 241, 241);
 }
 
+h3 {
+  margin: 0 0 1rem 0;
+}
+
 img {
   width: 100%;
   max-height: 15rem;
@@ -36,6 +40,15 @@ textarea {
 
 textarea {
   height: 8rem;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+.space-bt {
+  justify-content: space-between;
 }
 
 .right {
@@ -72,6 +85,9 @@ textarea {
 }
 
 .save-button {
+  margin: auto;
+  margin-right: 0;
+  margin-bottom: 1rem;
   border: none;
   padding: 0.5rem 1.25rem;
   font-size: 100%;
