--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,12 @@ main {
   background-color: rgb(241, 241, 241);
 }
 
+h1 {
+  font-size: 150%;
+  font-weight: 400;
+  margin: 0;
+}
+
 h3 {
   margin: 0 0 1rem 0;
 }
@@ -21,6 +27,10 @@ label {
   display: block;
   font-weight: 700;
   padding-bottom: 0.5rem;
+}
+
+button {
+  cursor: pointer;
 }
 
 img,
@@ -55,12 +65,17 @@ ul {
   justify-content: flex-end;
 }
 
+.align-center {
+  align-items: center;
+}
+
 .purple-bkg {
   color: rgb(241, 241, 241);
   background-color: rgb(73, 13, 129);
 }
 
 .container {
+  margin-bottom: 1rem;
   background-color: rgb(216, 216, 216);
 }
 
@@ -69,6 +84,10 @@ ul {
   font-weight: 400;
   padding: 0.5rem 1rem;
   font-size: 125%;
+}
+
+.no-entry {
+  text-align: center;
 }
 
 .form {
@@ -91,6 +110,11 @@ ul {
   border: none;
   padding: 0.5rem 1.25rem;
   font-size: 100%;
+}
+
+.show-entries {
+  margin-left: 1.5rem;
+  cursor: pointer;
 }
 
 input:focus,
