--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,11 @@ h3 {
   margin: 0 0 1rem 0;
 }
 
+p {
+  margin-top: 0;
+  margin-bottom: 2rem;
+}
+
 img {
   width: 100%;
   max-height: 15rem;
@@ -29,7 +34,8 @@ label {
   padding-bottom: 0.5rem;
 }
 
-button {
+button,
+i {
   cursor: pointer;
 }
 
@@ -65,6 +71,14 @@ ul {
   align-items: center;
 }
 
+.space-bt {
+  justify-content: space-between;
+}
+
+.purple {
+  color: rgb(73, 13, 129);
+}
+
 .purple-bkg {
   color: rgb(241, 241, 241);
   background-color: rgb(73, 13, 129);
@@ -93,6 +107,10 @@ ul {
 .form h2 {
   font-size: 200%;
   margin: 0 0 1rem 0;
+}
+
+.icon {
+  margin-right: 0;
 }
 
 .img-frame {
