--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ h1 {
 }
 
 h3 {
+  width: 90%;
   margin: 0 0 1rem 0;
 }
 
@@ -98,6 +99,10 @@ ul {
 
 .no-entry {
   text-align: center;
+}
+
+.fas {
+  margin-top: 0.5rem;
 }
 
 .form {
