--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,10 @@
   font-family: 'Open Sans', sans-serif;
 }
 
+body {
+  background-color: rgb(216, 216, 216);
+}
+
 /* Fonts used: 'Open Sans', light 300, regular 400, bold 700 */
 main {
   background-color: rgb(241, 241, 241);
@@ -44,7 +48,8 @@ i {
 img,
 input,
 textarea,
-button {
+button,
+.confirm {
   border-radius: 6px;
 }
 
@@ -70,6 +75,29 @@ ul {
   text-decoration: underline;
 }
 
+#confirm-delete {
+  color: white;
+  background-color: rgb(206, 0, 0);
+}
+
+#cancel-delete {
+  font-weight: 700;
+  background-color: lightgray;
+}
+
+#delete-popup {
+  display: flex;
+  background-color: rgba(53, 53, 53, 0.479);
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+}
+
+.flex {
+  display: flex;
+}
+
 .right {
   justify-content: flex-end;
 }
@@ -93,7 +121,23 @@ ul {
 
 .container {
   margin-bottom: 1rem;
-  background-color: rgb(216, 216, 216);
+}
+
+.confirm {
+  margin: auto;
+  max-width: 85%;
+  text-align: center;
+  padding: 1rem;
+  background-color: white;
+}
+
+.confirm h3 {
+  margin: auto;
+  padding: 2rem 1rem 3rem;
+}
+
+.confirm button {
+  margin: 0;
 }
 
 .head-banner {
@@ -157,5 +201,9 @@ button:active {
 
   .img-frame {
     padding-right: 1rem;
+  }
+
+  .confirm {
+    max-width: 50%;
   }
 }
