--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ h3 {
 
 p {
   margin-top: 0;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 
 img {
@@ -70,6 +70,10 @@ textarea {
 ul {
   list-style: none;
   padding: 0;
+}
+
+li {
+  margin-top: 1rem;
 }
 
 #search {
