--- a/css/styles.css
+++ b/css/styles.css
@@ -229,6 +229,10 @@ li {
   background-color: rgb(216, 216, 216);
 }
 
+.tag-link:hover {
+  background-color: rgb(228, 228, 228);
+}
+
 input:focus,
 textarea:focus,
 select:focus {
